<resources>
    <string name="app_name">Dicoding Events</string>
    <string name="recommendation_event">Recommendation event for you!</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_finished">Finished</string>
    <string name="title">Title Event</string>
    <string name="description">Deskripsi</string>
    <string name="summary">Summary</string>
    <string name="image_event_desc">Gambar Event</string>
    <string name="terbuka_hingga">Terbuka Hingga:</string>
    <string name="sisa_kuota">Sisa Kuota:</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="register">Register</string>
    <string name="favorite">Favorite Event</string>
    <string name="events_finished">Events Finished</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_desc">Enable dark mode</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="daily_reminder_desc">Enable notification</string>
</resources>