<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="3dp"
    tools:context=".ui.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@id/tv_title_event"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/img_event_photo"
            android:layout_width="0dp"
            android:layout_height="260dp"
            android:contentDescription="@string/image_event_desc"
            android:scaleType="centerCrop"
            android:layout_marginTop="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <Button
            android:id="@+id/btn_category"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:padding="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_event_photo"
            tools:text="Outlined button" />

        <TextView
            android:id="@+id/tv_title_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Judul"
            app:layout_constraintTop_toBottomOf="@+id/btn_category"
            android:layout_marginStart="16dp"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Diselenggarakan oleh: "
            app:layout_constraintTop_toBottomOf="@+id/tv_title_event"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/tv_open"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terbuka_hingga"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_owner"/>

        <TextView
            android:id="@+id/tv_end_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Oct 11, 2024"
            app:layout_constraintTop_toBottomOf="@+id/tv_open"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/participant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_end_time"
            android:layout_marginTop="14dp"
            android:text="@string/sisa_kuota"
            android:gravity="center"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tv_quota_remaining"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/participant"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            tools:text="1500 peserta"
            android:textSize="15sp"
            android:gravity="center"/>

        <View
            android:id="@+id/bounds"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/tv_quota_remaining"
            android:layout_marginTop="40dp"/>

        <TextView
            android:id="@+id/head_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bounds"
            android:text="@string/deskripsi" />

        <ImageView
            android:id="@+id/img_event_photo_desc"
            android:layout_width="0dp"
            android:layout_height="270dp"
            android:scaleType="center"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/image_event_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/head_desc"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_event_photo_desc"
            tools:text="FULL Deskripsi" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_button"
            android:layout_marginHorizontal="32dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/register"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>